--- a/src/App.css
+++ b/src/App.css
@@ -1,139 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   list-style: none;
   color: initial;
+  font-family: "Noto Sans KR", serif;
+  font-optical-sizing: auto;
 }
 
-.bg {
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-}
-
-/* ----- intro ----- */
-.intro {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.intro>h2 {
-  color: white;
-  font-size: 80px;
-  margin-left: 4rem;
-  text-align: center;
-}
-
-.intro>h2>span {
-  color: #e7f06c;
-  background-color: initial;
-  font-size: 105px;
-  /* text-shadow: 0px 0px 20px; */
-}
-
-/* ----- main ----- */
-.main {
-  width: 100%;
-  height: 100vh;
-  padding: 4% 0;
-}
-
-.top {
-  width: 90%;
-  height: 70%;
-  margin: 0 auto;
-  padding: 4% 0;
-  display: flex;
-  background-color: #fff;
-  border-radius: 30px;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.top>div>p {
-  font-size: 20px;
-}
-
-.main_title {
-  font-weight: 400;
-  font-size: 50px;
-  margin-bottom: 50px;
-}
-
-.photo_card {
-  background-color: white;
-  width: 500px;
-  height: 700px;
-  box-shadow: 0px 15px 5px -5px #051f20;
-  border: 1px solid #000;
-}
-
-.avatar {
-  width: 350px;
-  height: 350px;
-  margin-top: 75px;
-  margin-left: 75px;
-  margin-bottom: 50px;
-  background-image: url('../public/main_avatar.jpg');
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  box-shadow: inset 0px 5px 5px rgba(0, 0, 0, 1), inset 0px -5px 5px rgba(0, 0, 0, 1), inset 4px 0px 5px rgba(0, 0, 0, 1), inset -4px 0px 5px rgba(0, 0, 0, 1);
-}
-
-.semi_title {
-  justify-content: space-between;
-  font-size: 20px;
-  margin-bottom: 7px;
-  text-align: center;
-}
-
-.section1 {
-  margin-bottom: 30px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.intro_title {
-  display: inline-block;
-  color: #000;
-  font-size: 30px;
-  box-shadow: inset 0 -10px 0 #f6ff75;
-  margin-bottom: 1rem;
-}
-
-.section1 h2>img {
-  width: 20px;
-  height: 20px;
-}
-
-.logo {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  margin-left: 15px;
-  background-size: cover;
-  background-position: center;
-}
-
-.skills {
-  display: flex;
-
-}
-
-.back,
-.front,
-.db,
-.tools {
-  display: flex;
-  margin: 10px;
-}
+/* Tools */
 
 .react {
   background-image: url('../public/react.png');
@@ -215,58 +92,65 @@
   background-image: url('../public/notion.png');
 }
 
-.side {
-  width: 40%;
-  height: 450px;
+.smarty_logo {
+  background-image: url('../public/smarty_logo.png');
+}
+
+.tensorflow {
+  background-image: url('../public/tensorflow.png');
+}
+
+.keras {
+  background-image: url('../public/keras.png');
+}
+
+.pytorch {
+  background-image: url('../public/pytorch.png');
+}
+
+.numpy {
+  background-image: url('../public/numpy.png');
+}
+
+.opencv {
+  background-image: url('../public/opencv.png');
+}
+
+.zbar {
+  background-image: url('../public/zbar.png');
+}
+
+.selenium {
+  background-image: url('../public/selenium.png');
+}
+
+.gradle {
+  background-image: url('../public/gradle.png');
+}
+
+.srt_logo {
+  background-image: url('../public/srt_logo.png');
+}
+
+
+.logo {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  margin-left: 15px;
+  background-size: cover;
+  background-position: center;
+}
+
+/* Tools end */
+
+.bg {
+  width: 100%;
+  height: 100%;
+  background-color: #ffdead;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
-
-.github_info {
-  background-color: white;
-  border-radius: 10px;
-  height: 40%;
-  box-shadow: 5px 5px 5px #051f20;
-  padding-left: 20px;
-}
-
-.github_info>a>div {
-  margin-left: 30px;
-  color: black;
-}
-
-.education {
-  background-color: white;
-  height: 50%;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px #051f20;
-  padding-left: 20px;
-
-}
-
-.education img {
-  width: 30px;
-  height: 30px;
-}
-
-.education li {
-  margin-top: 10px;
-}
-
-/* ----- project ----- */
-
-.project {
-  width: 100%;
-  /* height: 100vh; */
-}
-
-.projects {
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  align-items: center;
 }
 
 .filter {
@@ -288,91 +172,302 @@
   line-height: 60px;
 }
 
+/* ----- project ----- */
+
 .screen {
-  width: 45%;
-  height: 450px;
+  width: 95%;
+  height: 90vh;
   background-color: white;
   box-sizing: border-box;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px #051f20;
+  padding: 30px 100px;
+  margin: 2.5% 0;
   position: relative;
-  margin-bottom: 50px;
+  border-radius: 10px;
 }
 
-.screenshot {
-  border-radius: 10px;
-  width: 100%;
+.infomation {
+  position: relative;
+  width: 80%;
   height: 100%;
-  overflow: hidden;
-}
-
-.btndata {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 450px;
-  display: none;
+  display: flex;
   flex-direction: column;
-  justify-content: center;
-  border-radius: 10px;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  z-index: 2;
+}
+
+/* project_title */
+
+.title {
+  display: flex;
+  margin-bottom: 40px;
   align-items: center;
-  overflow: hidden;
 }
 
-.btnbg {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 450px;
+.title .black_bar {
+  margin: 0 20px;
+  display: inline-block;
   background-color: #000;
-  opacity: 0.7;
-  z-index: 0;
+  height: 40px;
+  width: 4px;
 }
 
-.screen:hover .btndata {
+.title>div {
+  width: 200px;
+  height: 80px;
+  background-size: 200px;
+}
+
+.title>span {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #444;
+}
+
+/* project_info */
+
+.info {
+  display: flex;
+  flex-direction: column;
+  height: 250px;
+  justify-content: space-between;
+  font-size: 1.5rem;
+}
+
+.info>div {
   display: flex;
 }
 
-.btndata>* {
-  z-index: 1;
+.info>div>strong {
+  width: 200px;
+  display: flex;
+  align-items: center;
 }
 
-.btndata>h1 {
-  margin-bottom: 30px;
-  color: #fff;
+.info>div>span {
+  font-weight: 600;
+  color: #555;
 }
 
-.btndata>h3 {
-  /* margin-bottom: 20px; */
-  color: #fff;
+/* environ */
+
+.environ {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-size: 1.5rem;
+  height: 350px;
+}
+
+.environ>div {
+  display: flex;
+}
+
+.environ>div>strong {
+  width: 200px;
+  display: flex;
+  align-items: center;
+}
+
+.environ>div>span {
+  display: flex;
+}
+
+/* mockup */
+.mockup {
+  position: absolute;
+  width: 60%;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  z-index: 0;
+}
+
+.mockup img {
+  width: 100%;
+}
+
+/* Link button */
+.btndata {
+  margin-top: 20px;
 }
 
 .btndata button {
   z-index: 1;
   border: 1px solid #555;
+  margin-right: 20px;
   margin-bottom: 10px;
   width: 150px;
   height: 50px;
   padding: 5px;
   font-size: 20px;
-  background-color: white;
+  background-color: #383838;
   cursor: pointer;
 }
 
 .btndata a {
-  color: #383838;
+  color: #fff;
 }
 
 .btndata button:hover {
-  background-color: #383838;
+  background-color: #fff;
 }
 
 .btndata button:hover>a {
-  color: white;
+  color: #383838;
 }
 
 
-/* -----  ----- */
-/* -----  ----- */
-/* -----  ----- */
-/* -----  ----- */
+/* 반응형 디자인 */
+/* iPad Air ( wide ) */
+@media (max-width: 1180px) {
+  .logo {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+  }
+
+  .screen {
+    padding: 20px 30px;
+  }
+
+  .title {
+    margin-bottom: 10px;
+  }
+
+  .info {
+    height: 150px;
+    font-size: 1.2rem;
+  }
+
+  .info>div>span {
+    background-color: white;
+  }
+
+  .environ {
+    font-size: 1.2rem;
+    height: 250px;
+  }
+
+  .mockup {
+    width: 55%;
+    right: 0;
+  }
+}
+
+/* iPad Air ( vertical ) */
+@media (max-width: 820px) {
+
+  .screen {
+    padding: 5px 30px;
+    flex-direction: column;
+    height: 96vh;
+  }
+
+  .infomation {
+    width: 100%;
+    height: 100%;
+  }
+
+  .title {
+    margin: 0 auto;
+  }
+
+  .info,
+  .environ {
+    padding-left: 5%;
+  }
+
+  .mockup {
+    width: 100%;
+    top: 70%;
+    transform: translateY(-50%);
+    z-index: 0;
+  }
+
+  .btndata {
+    margin: 70% auto 0;
+  }
+}
+
+@media (max-width: 430px) {
+  .logo {
+    width: 35px;
+    height: 35px;
+    margin-left: 7px;
+  }
+
+  .screen {
+    padding: 0;
+    flex-direction: column;
+    height: 96vh;
+  }
+
+  .title {
+    margin: 0;
+    flex-direction: column;
+  }
+
+  .title>div {
+    width: 150px;
+    height: 50px;
+    background-size: 150px;
+  }
+
+  .title>span {
+    font-size: 0.9rem;
+  }
+
+  .title .black_bar {
+    display: none;
+  }
+
+  .info,
+  .environ {
+    padding-left: 7%;
+  }
+
+  .info {
+    height: 150px;
+    font-size: 0.95rem;
+  }
+
+  .info>div>strong {
+    width: 80px;
+  }
+
+  .environ {
+    font-size: 0.95rem;
+    height: 200px;
+  }
+
+  .environ>div>strong {
+    width: 100px;
+  }
+
+  .environ>div>span {
+    flex-wrap: wrap;
+  }
+
+  .mockup {
+    width: 100%;
+    top: 75%;
+    transform: translateY(-50%);
+    z-index: 0;
+  }
+
+  .btndata {
+    margin: 65% auto 0;
+    display: flex;
+    width: 90%;
+    justify-content: space-evenly;
+  }
+
+  .btndata button {
+    margin: 0;
+    width: 100px;
+    height: 50px;
+    padding: 5px;
+    font-size: 16px;
+  }
+}
